# pipeline

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
src/pipeline/: news.py  sumarize.py  video.py  voice.py
src/pipeline/video/: preprocess.py
