[tool.poetry]
name = "pipeline"
version = "0.1.0"
description = ""
authors = ["José Duarte <duarte.gmj@gmail.com>", "Diogo Cebola"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
moviepy = "^1.0.3"
transformers = "^4.33.2"
sentencepiece = "^0.1.99"
datasets = "^2.14.5"
torch = "^2.0.1"
soundfile = "^0.12.1"
load-dotenv = "^0.1.0"
newsapi-python = "^0.2.7"
# For the blur function
scikit-image = "^0.21.0"

# MoviePy is kinda fucked with the resize
# https://stackoverflow.com/questions/76616042/attributeerror-module-pil-image-has-no-attribute-antialias#comment135086262_76616129
pillow = "9.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
